add version scripts

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "unexpected": "10.19.0"
   },
   "scripts": {
+    "postversion": "npm publish && git push && git push --tags",
+    "preversion": "npm test",
     "test": "TZ=utc nyc mocha && standard"
   }
 }
