--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "mocha": "3.2.0",
     "nock": "9.0.4",
+    "np": "^2.13.1",
     "nyc": "10.1.2",
     "proxyquire": "1.7.11",
     "sinon": "1.17.7",
@@ -33,8 +34,7 @@
     "unexpected": "10.25.0"
   },
   "scripts": {
-    "postversion": "npm publish && git push && git push --tags",
-    "preversion": "npm test",
+    "release": "np",
     "test": "TZ=utc nyc mocha && standard"
   }
 }
