--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   "dependencies": {
     "co": "4.6.0",
     "heroku-cli-util": "6.1.17",
-    "heroku-pg": "2.0.23"
+    "heroku-pg": "2.2.1"
   },
   "devDependencies": {
-    "mocha": "3.2.0",
-    "nock": "9.0.4",
+    "mocha": "3.4.2",
+    "nock": "9.0.13",
     "np": "^2.13.1",
-    "nyc": "10.1.2",
-    "proxyquire": "1.7.11",
-    "sinon": "1.17.7",
-    "standard": "8.6.0",
-    "unexpected": "10.25.0"
+    "nyc": "11.0.2",
+    "proxyquire": "1.8.0",
+    "sinon": "<2",
+    "standard": "10.0.2",
+    "unexpected": "10.29.0"
   },
   "scripts": {
     "release": "np",
