--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "author": "Rob Anderton (@robanderton)",
   "description": "Heroku CLI plugin for the pgcli Postgres command line interface",
   "homepage": "https://github.com/robanderton/heroku-pg-pgcli",
+  "files": [
+    "index.js",
+    "lib",
+    "commands"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -19,19 +24,19 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "co": "4.6.0",
-    "heroku-cli-util": "6.1.17",
-    "heroku-pg": "2.2.1"
+    "co": "^4.6.0",
+    "heroku-cli-util": "^6.2.0",
+    "heroku-pg": "^2.4.0"
   },
   "devDependencies": {
-    "mocha": "3.4.2",
-    "nock": "9.0.13",
-    "np": "^2.13.1",
-    "nyc": "11.0.2",
-    "proxyquire": "1.8.0",
+    "mocha": "^3.4.2",
+    "nock": "^9.0.13",
+    "np": "^2.16.0",
+    "nyc": "^11.0.3",
+    "proxyquire": "^1.8.0",
     "sinon": "<2",
-    "standard": "10.0.2",
-    "unexpected": "10.29.0"
+    "standard": "^10.0.2",
+    "unexpected": "^10.29.0"
   },
   "scripts": {
     "release": "np",
